Compiler/tests/typing/bad/testfile-return-5.rs

fn f() -> i32 { return true; 42 }
fn main() {}
